[package]
name = "jobgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
tui = "0.19"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
subprocess = "0.2"
anyhow = "1.0"
